# mlora-neural-fields

./: .gitignore  README.md  pyproject.toml
configs/: base_field_ffhq128.yaml  fit_ffhq128.yaml
scripts/: eval_discrim.py  eval_reconstruction.py  eval_structure.py  fit_representations.py  train_base_field.py
src/mlora_nf/: __init__.py
src/mlora_nf.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/mlora_nf/data/: __init__.py  ffhq.py
src/mlora_nf/eval/: __init__.py  discrim.py  recon.py  structure.py
src/mlora_nf/models/: __init__.py  adapter_field.py  asym_mask.py  base_field.py  embedder.py  factory.py  lora.py  mlora.py  modulated_linear.py  standalone_mlp.py
src/mlora_nf/training/: __init__.py  autodecoder.py  per_instance.py
src/mlora_nf/utils/: coords.py
tests/: test_smoke.py
