[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "mlora_nf"
version = "0.0.1"
description = "Reimplementation of multiplicative LoRA weight-space neural fields (everything except the diffusion model)."
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1",
    "torchvision>=0.16",
    "numpy>=1.24",
    "pillow>=10.0",
    "pyyaml>=6.0",
    "tqdm>=4.66",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "ruff>=0.4"]

[tool.setuptools.packages.find]
where = ["src"]
